test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  labels:
    app: test
    tier: backend
spec:
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      name: test-pod
      labels:
        app: test
        tier: backend
    spec:
      containers:
        - name: test-container
          image: noteopx/test:31
          imagePullPolicy: Always
          ports:
            - containerPort: 30004
          volumeMounts:
            - name: protos
              mountPath: /notes-protos-nodejs
        - name: init-sync-ctr
          image: k8s.gcr.io/git-sync/git-sync:v3.5.0
          volumeMounts:
            - name: protos
              mountPath: /notes-protos-nodejs
          resources: {}
      volumes:
        - name: protos
          emptyDir: {}
