api-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deploy
  labels:
    app: api-gateway-deploy
    teir: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      name: api-gateway-pod
      labels:
        app: api-gateway
        tier: backend
    spec:
      containers:
        - name: api-gateway-container
          image: noteopx/api-gateway:30
          imagePullPolicy: Always
          ports:
            - containerPort: 30000
          volumeMounts:
            - name: protos
              mountPath: /notes-protos-nodejs
        - name: init-sync-ctr
          image: k8s.gcr.io/git-sync/git-sync:v3.5.0
          volumeMounts:
            - name: protos
              mountPath: /notes-protos-nodejs
          resources: {}
      volumes:
        - name: protos
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-svc
  labels:
    app: api-gateway-svc
spec:
  # type: LoadBalancer
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 30000
      targetPort: 30000
