notification-database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-db-deploy
spec:
  selector:
    matchLabels:
      app: notification-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: notification-db
    spec:
      containers:
        - name: notification-db-container
          image: postgres:15.2
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/notification
              name: notification-persist-storage
            - name: notification-dbcreation-script
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: notification-persist-storage
          persistentVolumeClaim:
            claimName: noteopx-notification-pvc
        - name: notification-dbcreation-script
          configMap:
            name: notification-cfm

---
apiVersion: v1
kind: Service
metadata:
  name: notification-db-svc
spec:
  # type: LoadBalancer
  selector:
    app: notification-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
