notification.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notication-deploy
  labels:
    app: notification-deploy
    tier: backend
spec:
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      name: notification-pod
      labels:
        app: notification
        tier: backend
    spec:
      containers:
        - name: notification-container
          image: noteopx/notification:17
          imagePullPolicy: Always
          ports:
            - containerPort: 30002
          volumeMounts:
            - name: protos
              mountPath: /notes-protos-nodejs
        - name: init-sync-ctr
          image: k8s.gcr.io/git-sync/git-sync:v3.5.0
          volumeMounts:
            - name: protos
              mountPath: /notes-protos-nodejs
          resources: {}
      volumes:
        - name: protos
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: notification-svc
  labels:
    app: notification-svc
spec:
  # type: LoadBalancer
  selector:
    app: notification
  ports:
    - name: http
      port: 30002
      targetPort: 30002
