subscription.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscription-deploy
  labels:
    app: subscription-deploy
    tier: backend
spec:
  selector:
    matchLabels:
      app: subscription-management
  template:
    metadata:
      name: subscription-management-pod
      labels:
        app: subscription-management
        tier: backend
    spec:
      containers:
        - name: subscription-management-container
          image: noteopx/subscription-magt:2
          imagePullPolicy: Always
          ports:
            - containerPort: 30004
          volumeMounts:
            - name: protos
              mountPath: /notes-protos-nodejs
        - name: init-sync-ctr
          image: k8s.gcr.io/git-sync/git-sync:v3.5.0
          volumeMounts:
            - name: protos
              mountPath: /notes-protos-nodejs
          resources: {}
      volumes:
        - name: protos
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: subscription-svc
  labels:
    app: subscription-svc
spec:
  # type: LoadBalancer
  selector:
    app: subscription-management
  ports:
    - name: http
      port: 30004
      targetPort: 30004
