user-database-external-name.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  type: ExternalName
  externalName: akswebappdb.mysql.databse.azure.com
