user.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management-deploy
  labels:
    app: user-management-deploy
    tier: backend
spec:
  selector:
    matchLabels:
      app: user-management
  template:
    metadata:
      name: user-management-pod
      labels:
        app: user-management
        tier: backend
    spec:
      containers:
        - name: user-management-container
          image: noteopx/user-magt:37
          imagePullPolicy: Always
          ports:
            - containerPort: 30001
          volumeMounts:
            - name: protos
              mountPath: /notes-protos-nodejs
        - name: init-sync-ctr
          image: k8s.gcr.io/git-sync/git-sync:v3.5.0
          volumeMounts:
            - name: protos
              mountPath: /notes-protos-nodejs
          resources: {}
      volumes:
        - name: protos
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: user-management-svc
  labels:
    app: user-management-svc
spec:
  # type: LoadBalancer
  selector:
    app: user-management
  ports:
    - name: http
      port: 30001
      targetPort: 30001
