web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deploy
  labels:
    app: web-deploy
    tier: frontend
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      name: web-pod
      labels:
        app: web
        tier: backend
    spec:
      containers:
        - name: web-container
          image: noteopx/web:39
          imagePullPolicy: Always
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  labels:
    app: web-svc
spec:
  selector:
    app: web
  ports:
    - name: http
      port: 80
      targetPort: 3000
