ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: noteopx-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: web.dev.noteopx.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-svc
                port:
                  number: 80
    - host: noteopx.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-svc
                port:
                  number: 80
    - host: api.dev.noteopx.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway-svc
                port:
                  number: 30000
    - host: mq.dev.noteopx.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-rabbitmq
                port:
                  number: 15672
  tls:
    - hosts:
        - web.dev.noteopx.com
      secretName: web-dev-noteopx-secret
    - hosts:
        - noteopx.com
      secretName: noteopx-secret
    - hosts:
        - api.dev.noteopx.com
      secretName: api-dev-noteopx-secret
    - hosts:
        - mq.dev.noteopx.com
      secretName: mq-dev-noteopx-secret
